<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:padding="5dp"
    tools:context="com.codepath.apps.twitterclient.fragments.ComposeTweetFragment">

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ivProfilePic"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:background="#ffffff"
        android:gravity="start|center_horizontal"
        android:text="@string/label_cancel_button"
        android:textColor="#55ACEE"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="#ffffff" />

    <EditText
        android:id="@+id/etTweet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnTweet"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ivProfilePic"
        android:gravity="top"
        android:hint="@string/label_tweet_hint" />

    <TextView
        android:id="@+id/tvCharCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/btnTweet"
        android:layout_toLeftOf="@+id/btnTweet"
        android:layout_toStartOf="@+id/btnTweet"
        android:gravity="center"
        android:text="@string/label_max_chars"
        android:textColor="#90A4AE" />

    <Button
        android:id="@+id/btnTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="#55ACEE"
        android:text="@string/label_tweet"
        android:textColor="#ffffff" />

</RelativeLayout>
