<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.codepath.apps.twitterclient.activities.ProfileActivity">

    <com.codepath.apps.twitterclient.layouts.CustomRelativeLayout
        android:id="@+id/crlUserHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/ivProfilePic"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="15dp"
            android:src="@android:drawable/screen_background_light_transparent" />

        <TextView
            android:id="@+id/tvProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ivProfilePic"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/ivProfilePic"
            android:layout_toRightOf="@+id/ivProfilePic"
            android:text="@string/label_profile_name"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvTagLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvProfileName"
            android:layout_alignStart="@+id/tvProfileName"
            android:layout_below="@+id/tvProfileName"
            android:layout_toEndOf="@+id/ivProfilePic"
            android:layout_toRightOf="@+id/ivProfilePic"
            android:text="@string/label_tag_line"
            android:textColor="#000000"
            android:textSize="12sp" />

    </com.codepath.apps.twitterclient.layouts.CustomRelativeLayout>

    <View
        android:id="@+id/separator_line_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/crlUserHeader"
        android:layout_marginBottom="10dp"
        android:background="#CFD8DC"/>

    <LinearLayout
        android:id="@+id/llCounts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/separator_line_1"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:weightSum="3" >

        <TextView
            android:id="@+id/tvNumTweets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_num_tweets"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_weight="1" />

        <View
            android:id="@+id/v_separator_line_1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#CFD8DC" />

        <TextView
            android:id="@+id/tvFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/label_num_followers"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_weight="1" />

        <View
            android:id="@+id/v_separator_line_2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#CFD8DC" />

        <TextView
            android:id="@+id/tvFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/label_num_following"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_weight="1" />

    </LinearLayout>

    <View
        android:id="@+id/separator_line_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/llCounts"
        android:layout_marginBottom="10dp"
        android:background="#CFD8DC" />

    <FrameLayout
        android:id="@+id/fragmentUserTimelineFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/separator_line_2" />

</RelativeLayout>
